@@ -7,6 +7,7 @@ import static org.springframework.boot.test.context.SpringBootTest.WebEnvironmen
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -29,9 +30,9 @@ class BasicConfigurationIntegrationTest {
     int port;
 
     @BeforeEach
-    void setUp() throws MalformedURLException {
+    void setUp() throws Exception {
         restTemplate = new TestRestTemplate("user", "password");
-        base = new URL("http://localhost:" + port);
+        base = new URI("http://localhost:" + port).toURL();
     }
 
     @Test
